--- a/templates/ajax/admin/users/pictos.html.twig
+++ b/templates/ajax/admin/users/pictos.html.twig
@@ -1,4 +1,7 @@
 {% extends "ajax/ajax.html.twig" %}
+
+{% from "ajax/admin/widget/controls.twig" import widget_picto_creator as picto_creator, widget_picto_creator_js as picto_creator_js %}
+
 {% block title %}{% trans from 'admin' %}Auszeichnungen{% endtrans %}{%  endblock %}
 {% block ajax %}
     <div class="row soul">
@@ -36,19 +39,8 @@
                         &nbsp;
                     </div>
                 </div>
-                <div class="cell rw-5 rw-sm-12">
-                    <label for="selectPicto">{{'Eine Auszeichnungen auswählen:'|trans({}, 'admin')}}</label>
-                    <select id="selectPicto">
-                        {% for pictoPrototype in pictoPrototypes %}
-                            <option value="{{pictoPrototype.id}}">{{ pictoPrototype.label|trans({}, 'game') }}</option>
-                        {% endfor %}
-                    </select>
-                    <label for="number">
-                        {{'Anzahl der Auszeichnungen:'|trans({}, 'admin')}}
-                    </label>
-                    <input type="number" id="number" value="1"/>
-                    <br />
-                    <button id="givebtn">{{'Vergeben!'|trans({}, 'admin')}}</button>
+                <div class="cell rw-5 rw-lg-7 rw-sm-12">
+                    {{ picto_creator(pictoPrototypes) }}
                 </div>
                 {% endif %}
             </div>
@@ -58,23 +50,7 @@
 {% endblock %}
 {% block js %}
     {{ parent() }}
-    <script>
-        {% if is_granted("ROLE_ADMIN") %}
-        let givebtn = document.getElementById("givebtn");
-        if (givebtn) givebtn.addEventListener('click', function(){
-            let number = document.getElementById("number").value;
-            if(isNaN(number)) number = 1;
-
-            let picto = document.getElementById('selectPicto').value;
-
-            $.ajax.easySend('{{ path('admin_user_give_picto', {id: user.id}) }}', {
-                    prototype: picto, number: number
-                },
-                function () {
-                    $.ajax.load(null, '{{ path('admin_users_pictos_view', {id: user.id}) }}', true);
-                }
-            );
-        });
-        {% endif %}
-    </script>
+    {% if is_granted("ROLE_ADMIN") %}
+        {{ picto_creator_js(path('admin_user_give_picto', {id: user.id}), path('admin_users_pictos_view', {id: user.id})) }}
+    {% endif %}
 {% endblock %}
