--- a/templates/ajax/admin/widget/controls.twig
+++ b/templates/ajax/admin/widget/controls.twig
@@ -224,3 +224,43 @@
     </script>
 {% endmacro %}
 <!-- </editor-fold> -->
+
+<!-- <editor-fold desc="Profession Manager Widget"> -->
+{% macro widget_profession_control(citizenProfessions, prefix = '') %}
+    <div class="lightbox">
+        <div class="row">
+            <div class="padded cell rw-12"><label for="{{ _self.gen_id(prefix,'prowidget','select')}}">{{'Einen Beruf auswählen:'|trans({}, 'admin')}}</label></div>
+        </div>
+        <div class="row-flex">
+            <div class="padded cell grow-1 shrink-1">
+                <select id="{{ _self.gen_id(prefix,'prowidget','select')}}">
+                    {% for pro in citizenProfessions %}
+                        <option value="{{pro.id}}">{{ pro.label|trans({}, 'game') }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="padded cell grow-0 shrink-0"><button id="{{ _self.gen_id(prefix,'prowidget','set')}}"><i class="fa fa-hand-point-down"></i><div class="tooltip">{{'Setzen'|trans({}, 'admin')}}</div></button></div>
+        </div>
+    </div>
+{% endmacro %}
+{% macro widget_profession_control_js(selector, api_url, load_url, prefix = '') %}
+    <script>
+        $.html.addEventListenerAll('#{{ _self.gen_id(prefix,'prowidget','set')}}','click', function(e,elem){
+            const profession = parseInt(document.getElementById('{{ _self.gen_id(prefix,'prowidget','select')}}').value);
+
+            let targets = [];
+
+            document.querySelectorAll('{{ selector|e('js') }}').forEach( element => targets.push(parseInt(element.getAttribute('x-id'))) );
+            if (targets.length === 0) {
+                $.html.error('{{ 'Kein Bürger ausgewählt!'|trans({}, 'admin') }}');
+                return;
+            }
+
+            $.ajax.easySend('{{ api_url }}', {
+                profession: profession, targets: targets
+                }, () => $.ajax.load(null, '{{ load_url }}', true)
+            );
+        });
+    </script>
+{% endmacro %}
+<!-- </editor-fold> -->
