--- a/templates/ajax/admin/users/citizen.html.twig
+++ b/templates/ajax/admin/users/citizen.html.twig
@@ -2,11 +2,10 @@
 
 {% from "ajax/admin/widget/displays.twig" import widget_citizen %}
 
-{% from "ajax/admin/widget/controls.twig" import widget_item_creator as item_creator, widget_item_creator_js as item_creator_js %}
-{% from "ajax/admin/widget/controls.twig" import widget_picto_creator as picto_creator, widget_picto_creator_js as picto_creator_js %}
 {% from "ajax/admin/widget/controls.twig" import widget_status_control as status_control, widget_status_control_js as status_control_js %}
 {% from "ajax/admin/widget/controls.twig" import widget_role_control as role_control, widget_role_control_js as role_control_js %}
 {% from "ajax/admin/widget/controls.twig" import widget_point_control as point_control, widget_point_control_js as point_control_js %}
+{% from "ajax/admin/widget/controls.twig" import widget_profession_control as profession_control, widget_profession_control_js as profession_control_js %}
 
 {% block title %}{% trans from 'admin' %}Bürger{% endtrans %}{%  endblock %}
 {% block ajax %}
@@ -15,31 +14,58 @@
             {% embed "ajax/admin/users/tabs.html.twig" %}{% endembed %}
 
             <div class="row">
-                <div class="cell rw-8 ro-2">
+                <div class="padded cell rw-4">
+                    <h5>{{ 'Entkoppelte Leben'|trans({}, 'admin') }}</h5>
+                    {% for other_life in user.citizens %}
+                        {# @var other_life \App\Entity\Citizen #}
+                        {% if not other_life.active %}
+                            <div class="row-flex">
+                                <div class="padded cell grow-0 shrink-0">
+                                    {% if other_life.alive %}
+                                        <img alt="{{ other_life.profession.label|trans({},'game') }}" src="{{ asset('build/images/professions/' ~ other_life.profession.icon ~ '.gif') }}" />
+                                    {% else %}
+                                        <img alt="{{ 'Tot!'|trans({},'game') }}" src="{{ asset('build/images/professions/death.gif') }}" />
+                                    {% endif %}
+                                </div>
+                                <div class="padded cell grow-1 shrink-1">
+                                    {{ other_life.town.name }}
+                                </div>
+                                <div class="padded cell grow-0 shrink-0">
+                                    <button {% if not is_granted("ROLE_ADMIN") or not other_life.alive %}disabled{% endif %} x-engage="{{ path('admin_users_citizen_engage', {id: user.id, cid: other_life.id}) }}"><i class="fa fa-recycle"></i></button>
+                                </div>
+                            </div>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+                <div class="cell rw-8">
                     <div class="row">
                         <div class="cell padded rw-12">
-                            {{ 'Derzeitiges Leben'|trans({}, 'admin') }}
+                            <h5>{{ 'Derzeitiges Leben'|trans({}, 'admin') }}</h5>
                             {% if alive %}
-                                <div class="tooltip">{{ widget_citizen(citizen) }}</div>
+                                <div class="tooltip">{{ widget_citizen(user_citizen) }}</div>
                             {% endif %}
                         </div>
-                        <div class="cell padded rw-12" id="citizen_base_selector" x-id="{{ citizen.id }}">
-                            <input disabled style="width: 25em;" value="{% if active %}{{ town.name }}{% if not alive %}{{ " -- " }}{{ 'TOD NICHT BESTÄTIGT'|trans({}, 'admin') }}{% endif %}{% else %}{{ "--" }}{% endif %}" />
+                        <div class="cell padded rw-12" {% if user_citizen is not null %}id="citizen_base_selector" x-id="{{ user_citizen.id }}"{% endif %}>
+                            <label><input disabled style="width: 25em;" value="{% if active %}{{ town.name }}{% if not alive %}{{ " -- " }}{{ 'TOD NICHT BESTÄTIGT'|trans({}, 'admin') }}{% endif %}{% else %}{{ "--" }}{% endif %}" /></label>
                         </div>
                         {% if active %}
                             {% if alive %}
-                                <div class="cell padded rw-4">
+                                <div class="cell padded rw-3">
                                     <button id="x-headshot">{{ 'Kopfschuss'|trans({}, 'admin') }}</button>
                                 </div>
-                                <div class="cell padded rw-4">
+                                <div class="cell padded rw-3">
+                                    <button {% if not is_granted("ROLE_ADMIN") %}disabled{% endif %} x-engage="{{ path('admin_users_citizen_engage', {id: user.id, cid: 0}) }}">{{ 'Entkoppeln'|trans({}, 'admin') }}</button>
+                                </div>
+                                <div class="cell padded rw-3">
                                     <button id="x-pm">{{ 'PM vom Raben'|trans({}, 'admin') }}</button>
                                 </div>
-                                <div class="cell padded rw-4">
+                                <div class="cell padded rw-3">
                                     <button x-ajax-href="{{ path("admin_town_explorer", {id: town.id}) }}">{{ 'Stadt ansehen'|trans({}, 'admin') }}</button>
                                 </div>
 
                                 {% if is_granted("ROLE_ADMIN") %}
-                                    <div class="cell padded rw-12">{{ point_control() }}</div>
+                                    <div class="cell padded rw-6">{{ point_control() }}</div>
+                                    <div class="cell padded rw-6">{{ profession_control(citizenProfessions) }}</div>
                                     <div class="cell padded rw-6">{{ status_control(citizenStati) }}</div>
                                     <div class="cell padded rw-6">{{ role_control(citizenRoles) }}</div>
                                 {% endif %}
@@ -67,11 +93,21 @@
 {% block js %}
     {{ parent() }}
     {% if is_granted("ROLE_ADMIN") and alive %}
-        {{ status_control_js('#citizen_base_selector', path('admin_town_manage_status', {id: citizen.town.id}), path('admin_users_citizen_view', {id: user.id})) }}
-        {{ role_control_js('#citizen_base_selector', path('admin_town_manage_role', {id: citizen.town.id}), path('admin_users_citizen_view', {id: user.id})) }}
-        {{ point_control_js('#citizen_base_selector', path('admin_town_alter_pp', {id: citizen.town.id}), path('admin_users_citizen_view', {id: user.id})) }}
+        {{ status_control_js('#citizen_base_selector', path('admin_town_manage_status', {id: user_citizen.town.id}), path('admin_users_citizen_view', {id: user.id})) }}
+        {{ role_control_js('#citizen_base_selector', path('admin_town_manage_role', {id: user_citizen.town.id}), path('admin_users_citizen_view', {id: user.id})) }}
+        {{ point_control_js('#citizen_base_selector', path('admin_town_alter_pp', {id: user_citizen.town.id}), path('admin_users_citizen_view', {id: user.id})) }}
+        {{ profession_control_js('#citizen_base_selector', path('admin_modify_profession', {id: user_citizen.town.id}), path('admin_users_citizen_view', {id: user.id})) }}
     {% endif %}
     <script>
+        {% if is_granted("ROLE_ADMIN") %}
+            $.html.addEventListenerAll('[x-engage]', 'click', (e,elem) => {
+                $.ajax.easySend( elem.getAttribute('x-engage'), [],
+                    function () {
+                        $.ajax.load(null, '{{ path('admin_users_citizen_view', { 'id': user.Id }) }}', true);
+                    } )
+            });
+        {% endif %}
+
         {% if active %}
             {% if alive %}
                 document.getElementById('x-headshot').addEventListener('click', function(e) {
