--- a/templates/ajax/pm/view.html.twig
+++ b/templates/ajax/pm/view.html.twig
@@ -7,7 +7,7 @@
 
             <div class="row-flex vertical stretch full-height">
 
-                <div class="cell rw-12 grow-0" style="padding-bottom: 10px;">
+                <div class="cell grow-0" style="padding-bottom: 10px;">
                     <div class="forum-control">
                         <div class="forum-header-bar">
                             <b><i class="fa fa-caret-right"></i> {{ 'Aktionen'|trans({},'global') }}</b>
@@ -22,11 +22,11 @@
                     </div>
                 </div>
 
-                <div class="cell rw-12 grow-0">
+                <div class="cell grow-0">
                     <div class="forum-note" style="border-bottom: none;"><b><i class="fa fa-comments"></i> {{ 'Konversationen'|trans({},'global') }}</b></div>
                 </div>
 
-                <div class="cell rw-12 grow-1 relative">
+                <div class="cell grow-1 relative">
                     <div class="forum-note max-height stretcher" style="border-top: none">
                         <div class="scroll-area" id="pm-conversation-list">
                             <div class="center small"><i class="fa fa-spin fa-circle-notch"></i> {{ 'Lade Unterhaltungen ...'|trans({},'global') }}</div>
