Add titles (auto unlock not working yet)

--- a/templates/ajax/forum/posts.html.twig
+++ b/templates/ajax/forum/posts.html.twig
@@ -160,9 +160,10 @@
                             <div class="avatar small"><img alt="" src="{{ asset('build/images/forum/empty_avatar.gif') }}"></div>
                         {% endif %}
                         {% if post.translate %}
-                        <b>{{ author_name }}</b>
+                            <b>{{ author_name }}</b>
                         {% else %}
-                        <a class="link" href="{{ path('soul_visit', {id: post.owner.id}) }}"><b>{{ author_name }}</b></a>
+                            <a class="link" href="{{ path('soul_visit', {id: post.owner.id}) }}"><b>{{ author_name }}</b></a>
+                            {% if post.owner.activeTitle %}<br /><span class="small float-left">{{ post.owner.activeTitle.prototype.title|trans({},'game') }}</span>{% endif %}
                         {% endif %}
                         {% if post.note is not null %}<div class="right post-note">{{ post.note|raw }}</div>{% endif %}
                     </div>
