--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -106,6 +106,13 @@ div.tooltip.badge-tooltip {
         width: auto; height: 230px; position: relative; font-size: 0; background: url("../../img/soul/soul_night.jpg") no-repeat right top;
         background-size: cover;
 
+        &>.badge-title {
+          font-size: 1.2rem; margin-top: 24px; backdrop-filter: blur(3px); -webkit-backdrop-filter: blur(3px);
+          background: fade(@myhordes-badge-color,60%); outline: 1px solid lighten(@myhordes-badge-color,10%);
+          padding: 3px 24px; display: inline-block; box-shadow: 0 0 5px rgba(0,0,0,0.9); text-shadow: 0 0 5px black;
+          font-weight: bold;
+        }
+
         &>.badge {
             top: 30px;
             width: 64px; height: 64px; padding: 0; margin: 10px; display: inline-block; border: 1px solid @myhordes-badge-color;
