--- a/templates/ajax/soul/badges.html.twig
+++ b/templates/ajax/soul/badges.html.twig
@@ -1,5 +1,9 @@
 {#  @var bagder \App\Entity\User #}
 <div class="cell rw-12 center night">
+    {% if badger.activeTitle is not null %}
+        <div class="badge-title">{{ badger.activeTitle.prototype.title|trans({},'game') }}</div><br />
+    {% endif %}
+
     {% if user_handler.hasRole(badger, "ROLE_ADMIN") %}
         <div class="badge {{ user_handler.hasRole(badger, "ROLE_SUPER") ? 'badge-admin-master' : 'badge-admin' }}">
             <div><i class="fa fa-hammer"></i></div>
